--- a/templates/Add.html
+++ b/templates/Add.html
@@ -5,7 +5,7 @@
 <body>
 <form method='POST' action="" >
 <div >PhoneBook</div>
-Name   <input type="text" name="name" />
+Name   <input type="text" name="name ki" />
 <br>
 Number <input type="text" name="number"/>
 <br>
